@@ -409,7 +409,7 @@ void ENDFPackCONT  (Record <i>cont</i>, ENDF <i>*lib</i>)
 void ENDFPackLIST  (Record <i>cont</i>, double <i>*xdat</i>, ENDF <i>*lib</i>)
 void ENDFPackTAB1  (Record <i>cont</i>, int <i>*idat</i>, double <i>*xdat</i>, ENDF <i>*lib</i>)
 void ENDFPackTAB2  (Record <i>cont</i>, Record <i>*cdat</i>, int <i>*idat</i>, double <i>**xtab</i>, ENDF <i>*lib</i>)
-void ENDFPackTAB21 (Record <i>cont</i>, int <i>*idat</i>, Record <i>*cdat</i>,
+void ENDFPackTAB21 (Record <i>cont</i>, Record <i>*cdat</i>, int <i>*idat</i>, 
                                  int <i>**itab</i>, double <i>**xtab</i>, ENDF <i>*lib</i>)
 </pre>
 
