@@ -1,3 +1,11 @@
+2024-02-02  KAWANO Toshihiko  <kawano@lanl.gov>
+
+	* source/decemod4.cpp (DeceResonanceAngularDistribution): updated
+	resonance reconstructed angular distribution for LTT=2 case added
+
+	* source/endflib.cpp (ENDFPackTAB21): modified
+	argument order (Recor *, int *) swapped to follow ENDFPackTAB2
+
 2023-09-13  Toshihiko Kawano  <kawano@lanl.gov>
 
 	* source/deceprocpointwise.cpp (DeceGeneratePointwise): updated
